--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@svgr/webpack": "^6.2.1",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
+    "@types/styled-components": "^5.1.24",
     "babel-plugin-styled-components": "^2.0.6",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
